# tree-sitter-facade

./: Cargo.toml  README.md  crates.js  package-lock.json  package.json  search-index.js  settings.html  source-files.js
.github/workflows/: main.yaml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
src/: error.rs  input_edit.rs  language.rs  lib.rs  logger.rs  node.rs  parser.rs  point.rs  query.rs  range.rs  tree.rs  tree_cursor.rs
src/tree_sitter_facade/: error.rs.html  input_edit.rs.html  language.rs.html  lib.rs.html  logger.rs.html  node.rs.html  parser.rs.html  point.rs.html  query.rs.html  range.rs.html  tree.rs.html  tree_cursor.rs.html
tree_sitter_facade/: all.html  index.html  sidebar-items.js  struct.IncludedRangesError.html  struct.InputEdit.html  struct.Language.html  struct.LanguageError.html  struct.LoggerReturn.html  struct.Node.html  struct.Parser.html  struct.ParserError.html  struct.Point.html  struct.Query.html  struct.QueryError.html  struct.Range.html  struct.Tree.html  struct.TreeCursor.html  struct.TreeSitter.html  type.LogType.html  type.Logger.html
tree_sitter_facade/error/native/: struct.IncludedRangesError.html  struct.LanguageError.html  struct.ParserError.html  struct.QueryError.html
tree_sitter_facade/input_edit/native/: struct.InputEdit.html
tree_sitter_facade/language/native/: struct.Language.html
tree_sitter_facade/logger/native/: struct.LoggerReturn.html  type.LogType.html  type.Logger.html
tree_sitter_facade/node/native/: struct.Node.html
tree_sitter_facade/parser/native/: struct.Parser.html
tree_sitter_facade/point/native/: struct.Point.html
tree_sitter_facade/query/native/: struct.Query.html
tree_sitter_facade/range/native/: struct.Range.html
tree_sitter_facade/tree/native/: struct.Tree.html
tree_sitter_facade/tree_cursor/native/: struct.TreeCursor.html
