[package]
edition = "2021"
name = "tree-sitter-facade"
version = "0.3.0"
authors = ["<silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/silvanshade/tree-sitter-facade"
description = """
A uniform interface for `tree-sitter` (rust) and `web-tree-sitter` (wasm-bindgen).
"""

[badges]
maintenance = { status = "experimental" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[features]

[dependencies]
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "=0.2.80", features = ["strict-macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-tree-sitter]
package = "web-tree-sitter-sys"
version = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = []

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[workspace]
members = [".", "xtask"]
default-members = ["."]
